src/test/ui/consts/miri_unleashed/feature-gate-unleash_the_miri_inside_of_you.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/feature-gate-unleash_the_miri_inside_of_you.rs:11:20
   |
LL |     const F: u32 = (U::X, 42).1;
   |                    ^^^^^^^^^^ constants cannot evaluate destructors

error: aborting due to previous error

For more information about this error, try `rustc --explain E0493`.
